Brighten up yellow in dark mode - fixes #26.

--- a/style/style.css
+++ b/style/style.css
@@ -42,7 +42,7 @@ html.high-contrast {
     --black: #333;
     --possible: #888;
     --orange: #b60;
-    --yellow: #880;
+    --yellow: #a94;
     --green: green;
     --red-fg: #f77;
     --green-fg: #7f7;
